--- a/portfolio/src/styles/App.css
+++ b/portfolio/src/styles/App.css
@@ -16,5 +16,28 @@
   font-family: 'Playfair Display', serif;
   margin-left: 10px;
   margin: 5px 0 5px 10px;
+  text-decoration: none;
+  color:black;
+  position: relative;
+}
 
+.link:focus {
+  font-style: italic;
+}
+
+.link::before {
+  content: "";
+  position: absolute;
+  width: 10%;
+  background-color: #6B9080;
+  height: 2px;
+  bottom: 0;
+  transform-origin: 100% 50%;
+  transform: scaleX(0);
+  transition: transform 0.3s ease;
+}
+
+.link:hover::before {
+  transform-origin: 0% 50%;
+  transform: scaleX(1);
 }
