--- a/portfolio/src/styles/index.css
+++ b/portfolio/src/styles/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Kalnia:wght@100;200;300;400&family=Playfair+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kalnia:wght@100;200;300;400&family=Playfair+Display:ital@0;1&display=swap');
 
 body {
   margin: 0;
