--- a/portfolio/src/styles/App.css
+++ b/portfolio/src/styles/App.css
@@ -1,3 +1,4 @@
+
 .content {
   position: absolute;
   top: 50%;
@@ -7,9 +8,42 @@
   height: 90%;
   border: 1px solid #6B9080;
   display: flex;
-  /* justify-content: center; */
   align-items: center;
   flex-direction: column;
+  background-size: 200% 200%;
+    /* Adjust the size based on your preference */
+    /* background-image: url('/public/images/dots.jpg'); */
+  background-image: linear-gradient(-45deg, #EAF4F4 0%, #CCE3DE 25%, #EAF4F4 51%, #A4C3B2 100%);
+  -webkit-animation: dotAnimate 10s ease infinite;
+  animation: dotAnimate 10s ease infinite;
+}
+
+@-webkit-keyframes dotAnimate {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@keyframes dotAnimate {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 .flex-content {
