--- a/portfolio/src/styles/index.css
+++ b/portfolio/src/styles/index.css
@@ -7,7 +7,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #b3c1c9;
+  background-color: #C6D4DC;
 }
 
 body::before {
