--- a/portfolio/src/styles/contact.css
+++ b/portfolio/src/styles/contact.css
@@ -1,10 +1,54 @@
 a.contact-link {
   font-family: 'Playfair Display', serif;
-    margin-left: 10px;
-    margin: 5px 0 5px 10px;
-    text-decoration: none;
-    color: #232F2A;
-    position: relative;
-    transition: color .3s ease-in-out;
+  margin-left: 10px;
+  margin: 5px 0 5px 10px;
+  text-decoration: none;
+  color: #232F2A;
+  position: relative;
+  transition: color .3s ease-in-out;
+  display: flex;
+}
+/*
+div.me-container {
+  position: relative;
     display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+
+} */
+
+.me  {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  height: 30rem;
+  width: 30rem;
+  background-color: #D7ACA4;
+  border-radius: 50%;
+  display: flex;
+  margin-bottom: 15px;
+  margin-right: 15px;
+  opacity: 0.65;
+  z-index: 0;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+
+img {
+  height: 20rem;
+  z-index: 1;
+}
+
+@media (max-width: 600px) {
+  .me {
+    height: 20rem;
+    width: 20rem;
+    position: relative;
+  }
+
+  img {
+    height: 15rem;
+  }
 }
