--- a/portfolio/src/styles/App.css
+++ b/portfolio/src/styles/App.css
@@ -146,10 +146,11 @@ div.content-grid {
   color: #456C73;
 }
 
-.color-mode {
+.logo-link {
   position: absolute;
   left: 0;
-  margin-left: 40px;
+  margin-left: 45px;
   bottom: 0;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
+  z-index: 3;
 }
