--- a/portfolio/src/styles/App.css
+++ b/portfolio/src/styles/App.css
@@ -151,6 +151,10 @@ div.content-grid {
   left: 0;
   margin-left: 45px;
   bottom: 0;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   z-index: 3;
+}
+
+a.logo {
+  margin-right: 10px;
 }
