--- a/portfolio/src/styles/App.css
+++ b/portfolio/src/styles/App.css
@@ -117,11 +117,16 @@ div.content-grid {
     min-width: 94%;
   }
 
-  div.color-mode {
+  div.logo-link {
     position: absolute;
-    left: -40px;
-    bottom: -50px;
-    padding-bottom: 10px;
+    left: -8%;
+    bottom: -4%;
+    z-index: 2;
+    padding-left: 0;
+  }
+
+  a.logo {
+    margin-right: 10px;
   }
 }
 
@@ -152,7 +157,7 @@ div.content-grid {
   margin-left: 45px;
   bottom: 0;
   margin-bottom: 5px;
-  z-index: 3;
+  z-index: 5;
 }
 
 a.logo {
