--- a/portfolio/src/styles/App.css
+++ b/portfolio/src/styles/App.css
@@ -42,6 +42,8 @@
 div.content-grid {
   position: relative;
   z-index:2;
+  height: 100%;
+  overflow: scroll;
 }
 /* .content {
   position: absolute;
@@ -99,7 +101,8 @@ div.content-grid {
   text-align: right;
   justify-content: flex-end;
   align-items: flex-end;
-  max-width: 25rem
+  max-width: 25rem;
+  overflow: auto;
 }
 
 @media (max-width: 600px) {
@@ -115,6 +118,8 @@ div.content-grid {
     height: auto;
     min-height: 90%;
     min-width: 94%;
+    z-index: 2;
+    overflow-y: scroll;
   }
 
   div.logo-link {
