--- a/portfolio/src/styles/App.css
+++ b/portfolio/src/styles/App.css
@@ -42,7 +42,7 @@
 div.content-grid {
   position: relative;
   z-index:2;
-  height: 100%;
+  /* height: 100%; */
   overflow: scroll;
 }
 /* .content {
