--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -145,6 +145,7 @@ div.content-grid {
   transition: color .3s ease-in-out;
   display: flex;
   z-index: 2;
+  width:fit-content;
 }
 
 .link:focus {
