--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -135,7 +135,7 @@ div.content-grid {
   }
 }
 
-.link {
+.normal {
   font-family: 'Playfair Display', serif;
   margin-left: 10px;
   margin: 5px 0 5px 10px;
@@ -148,12 +148,21 @@ div.content-grid {
   width:fit-content;
 }
 
-.link:focus {
+.focused {
+  font-family: 'Playfair Display', serif;
   font-style: italic;
+  margin-left: 10px;
+  margin: 5px 0 5px 10px;
+  text-decoration: none;
   color: #456C73;
+  position: relative;
+  transition: color .3s ease-in-out;
+  display: flex;
+  z-index: 2;
+  width:fit-content;
 }
 
-.link:hover {
+.normal:hover {
   color: #456C73;
 }
 
