--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,6 +8,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #C6D4DC;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 body::before {
@@ -20,6 +22,10 @@ body::before {
   opacity: 0.8;
 
   z-index: -1;
+}
+
+body::-webkit-scrollbar {
+    display: none;
 }
 /*
 body {
