--- a/src/styles/portfolio.css
+++ b/src/styles/portfolio.css
@@ -72,6 +72,7 @@ div.proj-grid {
     height: 40%;
     /* flex-direction: column;
     display: flex; */
+    overflow:scroll;
   }
 
   /* a.proj-link {
